# ChangeLog for dev-java/jython
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jython/ChangeLog,v 1.72 2012/01/01 12:24:17 sera Exp $

  01 Jan 2012; Ralph Sennhauser <sera@gentoo.org> jython-2.1-r11.ebuild:
  Drop ia64 support #345433

  16 Nov 2011; Markos Chandras <hwoarang@gentoo.org> jython-2.2.1-r1.ebuild,
  jython-2.5.0-r1.ebuild, jython-2.5.1-r1.ebuild, jython-2.5.1-r2.ebuild,
  jython-2.5.1.ebuild:
  Update LICENSE. Patch by Arfrever

*jython-2.5.1-r2 (13 Dec 2010)

  13 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +jython-2.5.1-r2.ebuild,
  +files/jython-2.5.1-distutils_byte_compilation.patch,
  +files/python-2.5.5-distutils_byte_compilation.patch:
  Properly use python.eclass. Add "readline", "ssl", "threads" and "xml" USE
  flags. Support PYTHONDONTWRITEBYTECODE in Distutils. Rename "jython-2.5"
  script to "jython2.5". Respect JYTHON_SYSTEM_CACHEDIR and delete unsetting of
  EPYTHON in "jython2.5" script.

  20 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  jython-2.5.1-r1.ebuild,
  +files/jython-2.5.1-distutils_scripts_location.patch,
  +files/jython-2.5.1-respect_PYTHONPATH.patch:
  Make Distutils install scripts into /usr/bin (bug #305103). Respect
  PYTHONPATH variable (bug #305103).

*jython-2.5.1-r1 (19 Mar 2010)

  19 Mar 2010; Alistair Bush <ali_bush@gentoo.org> +jython-2.5.1-r1.ebuild:
  Prepare jython to be Python ABI provider #305103.

*jython-2.5.1 (05 Mar 2010)

  05 Mar 2010; Alistair Bush <ali_bush@gentoo.org> +jython-2.5.1.ebuild,
  +files/jython-2.5.1-build.patch:
  Version Bump jython to 2.5.1

  15 Jan 2010; Ulrich Mueller <ulm@gentoo.org> jython-2.1-r11.ebuild:
  LICENSE is identical with BSD, bug 301123.

  06 Aug 2009; Alistair Bush <ali_bush@gentoo.org> jython-2.5.0-r1.ebuild:
  Fix build issue, thanks to Jeremy Stent for the report. see #280479

*jython-2.5.0-r1 (22 Jun 2009)
